<resources>
    <string name="app_name">Taqueria</string>
    <string name="description_logo">Logo de aplicaciòn</string>
    <string name="description_app">Aplicación de ventas</string>
    <string name="btn_login">Iniciar sesión</string>
    <string name="btn_add_account">Crear cuenta</string>
    <string name="more_signIn">O utiliza alguna de estas opciones</string>
    <string name="btn_login_facebook">Inicia sesión con Facebook</string>
    <string name="btn_login_google">Inicia sesión con cuenta de google</string>
    <string name="helper_required">Campo requerido</string>
    <string name="hint_email">correo electrònico</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_phone">nùmero de telèfono</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="description_back">Botón para regresar</string>
    <string name="description_settings">Botón de configuraciones</string>
    <string name="tlb_settings">Settings</string>
    <string name="tlb_add_title">Crea cuenta</string>
    <string name="tlb_logout">Cerrar sesión</string>
    <string name="tlb_profile">Perfil de usuario</string>
    <string name="tlb_modify_menu">Modificar menú</string>
</resources>