<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

<ImageView
    android:id="@+id/logo"
    android:layout_width="@dimen/logo_size"
    android:layout_height="@dimen/logo_size"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:contentDescription="@string/description_logo"
    android:src="@mipmap/ic_launcher"/>

    <TextView
        android:id="@+id/tvDescriptionApp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintStart_toStartOf="@+id/logo"
        app:layout_constraintEnd_toEndOf="@+id/logo"
        android:text="@string/description_app"
        android:textSize="@dimen/text_size_title"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvDescriptionApp"
        app:layout_constraintStart_toStartOf="@+id/tvDescriptionApp"
        app:layout_constraintEnd_toEndOf="@+id/tvDescriptionApp"
        android:layout_marginTop="@dimen/margin_min"
        android:text="@string/btn_login"
        android:backgroundTint="@color/white"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAddAccount"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintStart_toStartOf="@+id/tvDescriptionApp"
        app:layout_constraintEnd_toEndOf="@+id/tvDescriptionApp"
        android:layout_marginTop="@dimen/margin_min"
        android:text="@string/btn_add_account"
        android:backgroundTint="@color/blue"/>

    <TextView
        android:id="@+id/tvMoreLogins"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnAddAccount"
        app:layout_constraintStart_toStartOf="@+id/btnAddAccount"
        app:layout_constraintEnd_toEndOf="@+id/btnAddAccount"
        android:layout_marginTop="@dimen/margin_min"
        android:text="@string/more_signIn"
        android:textSize="@dimen/size_more"/>

    <ImageButton
        android:id="@+id/btnFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvMoreLogins"
        app:layout_constraintStart_toStartOf="@+id/tvMoreLogins"
        android:layout_marginTop="@dimen/margin_min"
        android:contentDescription="@string/btn_login_facebook"
        android:src="@mipmap/ic_facebook"
        android:background="@color/white"/>

    <View
        android:id="@+id/divider"
        android:layout_width="1dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@+id/btnFacebook"
        app:layout_constraintStart_toEndOf="@+id/btnFacebook"
        app:layout_constraintEnd_toStartOf="@+id/btnGoogle"
        app:layout_constraintBottom_toBottomOf="@+id/btnFacebook"
        android:layout_marginStart="@dimen/margin_min"
        android:background="@color/gray_light"/>

    <ImageButton
        android:id="@+id/btnGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/btnFacebook"
        app:layout_constraintEnd_toEndOf="@+id/tvMoreLogins"
        app:layout_constraintStart_toEndOf="@+id/divider"
        app:layout_constraintBottom_toBottomOf="@+id/btnFacebook"
        android:layout_marginStart="@dimen/margin_min"
        android:contentDescription="@string/btn_login_google"
        android:src="@mipmap/ic_google_account"
        android:background="@color/white"/>




</androidx.constraintlayout.widget.ConstraintLayout>